--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,7 @@
 @import 'base/reset';
 @import 'base/tupography';
+@import 'base/tupography';
+@import 'abstracts/variables';
+@import 'abstracts/placeholders';
+@import 'components/buttons';
+@import 'layout/header';
